style: externalize the set union operation